--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,6 +4,7 @@ lon: -0.2031049
 catchment: SE
 direction: E
 interval: 10800
+iot_auth: true
 private_key: default-private.key
 public_key: default-certificate.key
 endpoint: iot_credentials_endpoint
