--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "autosemver"]
 build-backend = "setuptools.build_meta"
 
 [project]
-dependencies = ["astral", "boto3", "picamzero", "platformdirs", "python-dotenv", "pyyaml", "opencv-python-headless==4.11.0.86", "picamera2==0.3.27", "requests"]
+dependencies = ["astral", "autosemver", "boto3", "picamzero", "platformdirs", "python-dotenv", "pyyaml", "opencv-python-headless==4.11.0.86", "picamera2==0.3.27"]
 requires-python = ">=3.9"
-version = "0.1.0"
 name = "dri-raspberrycam"
+dynamic = ["version"]
 description = "An app for taking pictures with a raspberry pi and uploading them to S3"
 
 [project.optional-dependencies]
